Makefile.am: add missing files to distribute package

--- a/Makefile.am
+++ b/Makefile.am
@@ -6,12 +6,7 @@ if HAVE_GCOV
 clean-local: clean-gcov
 endif
 
-#sysconf_DATA = init.d/kurload.conf
-#init_ddir = $(sysconfdir)/init.d
-#dist_init_d_SCRIPTS = init.d/kurload
-#man_MANS = kurload.1
-#EXTRA_DIST = man2html.sh gen-download-page.sh readme.md 
-EXTRA_DIST = tap-driver.sh
+EXTRA_DIST = tap-driver.sh psmq-common.h readme.md man2html.sh
 
 analyze:
 	make analyze -C src
