--- a/www/Makefile.am
+++ b/www/Makefile.am
@@ -1,4 +1,4 @@
-EXTRA_DIST = custom.css footer.in header.in index.in index.md
+EXTRA_DIST = custom.css footer.in header.in index.in index.md post-process.sh
 
 www:
 	kursg -o out
