--- a/pkg/deb/control.template
+++ b/pkg/deb/control.template
@@ -2,7 +2,7 @@ Source: psmq
 Section: embedded
 Priority: optional
 Maintainer: Michał Łyszczek <michal.lyszczek@bofc.pl>
-Build-Depends: embedlog (>=0.4.0), debhelper (>=10), autotools-dev, dh-autoreconf
+Build-Depends: libembedlog0 (>=0.4.0), debhelper (>=10), autotools-dev, dh-autoreconf
 Standards-Version: 3.9.8
 Vcs-Git: https://git.kurwinet.pl/psmq
 Vcs-browser: https://git.kurwinet.pl/psmq
@@ -12,15 +12,24 @@ Package: psmq
 Section: embedded
 Pre-Depends: ${misc:Pre-Depends}
 Architecture: any
-Depends: embedlog (>=0.4.0), ${shlibs:Depends}, ${misc:Depends}
-Description: psmq is publish ssubscribe message queue. It's a set of
+Depends: libembedlog0 (>=0.4.0), libpsmq0 (= ${binary:Version}), ${shlibs:Depends}, ${misc:Depends}
+Description: This psmq is publish ssubscribe message queue. It's a set of
  programs and libraries to implement publish/subscribe way of inter process
  communication on top of POSIX message queue
 
-Package: psmq-dev
+Package: libpsmq0
 Section: embedded
+Pre-Depends: ${misc:Pre-Depends}
+Architecture: any
+Depends: ${shlibs:Depends}, ${misc:Depends}
+Description: This psmq is publish ssubscribe message queue. It's a set of
+ programs and libraries to implement publish/subscribe way of inter process
+ communication on top of POSIX message queue
+
+Package: libpsmq-dev
+Section: libdevel
 Depends: psmq (= ${binary:Version}), ${misc:Depends}
 Architecture: any
-Description: psmq is publish ssubscribe message queue. It's a set of
+Description: This psmq is publish ssubscribe message queue. It's a set of
  programs and libraries to implement publish/subscribe way of inter process
  communication on top of POSIX message queue
