--- a/pkg/deb/rules
+++ b/pkg/deb/rules
@@ -4,5 +4,8 @@ export DH_VERBOSE = 1
 %:
 	dh $@ --list-missing --with autoreconf
 
+override_dh_shlibdeps:
+	dh_shlibdeps -l$(shell pwd)/lib/.libs --dpkg-shlibdeps-params=--ignore-missing-info
+
 override_dh_auto_test:
 	LD_LIBRARY_PATH=/usr/bofc/lib $(MAKE) check
