Makefile.am: add missing gen-download-page.sh to dist package
no_buildbot
Signed-off-by: Michał Łyszczek <michal.lyszczek@bofc.pl>

--- a/Makefile.am
+++ b/Makefile.am
@@ -6,7 +6,8 @@ if HAVE_GCOV
 clean-local: clean-gcov
 endif
 
-EXTRA_DIST = tap-driver.sh psmq-common.h readme.md man2html.sh
+EXTRA_DIST = tap-driver.sh psmq-common.h readme.md man2html.sh \
+	gen-download-page.sh
 
 analyze:
 	make analyze -C src
