--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -1,6 +1,6 @@
 lib_LTLIBRARIES = libpsmq.la
 
-libpsmq_la_SOURCES = psmq.c
+libpsmq_la_SOURCES = psmq.c ../utils.c
 
 libpsmq_la_LDFLAGS = -version-info 1:0:1 $(COVERAGE_LDFLAGS)
 libpsmq_la_CFLAGS = $(COVERAGE_CFLAGS) -I$(top_srcdir)/inc -I$(top_srcdir)
