src/Makefile.am: fix path to utils.c
Use absolute path, to prevent autotools to error on distcheck.

Signed-off-by: Michał Łyszczek <michal.lyszczek@bofc.pl>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,6 +1,6 @@
 #include ../Makefile.am.coverage
 
-psmqd_source = cfg.c globals.c psmqd.c broker.c topic-list.c ../utils.c
+psmqd_source = cfg.c globals.c psmqd.c broker.c topic-list.c $(top_srcdir)/utils.c
 psmqs_source = psmq-sub.c
 psmqp_source = psmq-pub.c
 psmq_headers = cfg.h broker.h globals.h topic-list.h $(top_srcdir)/valid.h \
