lower limit for minimum msg size, update docs
Signed-off-by: Michał Łyszczek <michal.lyszczek@bofc.pl>

--- a/configure.ac
+++ b/configure.ac
@@ -126,9 +126,10 @@ AC_ARG_VAR([PSMQ_MSG_MAX], [Maximum length of message (topic + payload)])
 AS_IF([test "x$PSMQ_MSG_MAX" = x], [PSMQ_MSG_MAX="255"])
 #AC_DEFINE_UNQUOTED([PSMQ_MSG_MAX], [$PSMQ_MSG_MAX], [Maximum length of message (topic + payload])
 
-AS_IF([test $PSMQ_MSG_MAX -lt 9],
+# reason for this limit is documented in inc/psmq.h.in
+AS_IF([test $PSMQ_MSG_MAX -lt 6],
 [
-    AC_MSG_ERROR(PSMQ_MSG_MAX must be at least 9)
+    AC_MSG_ERROR(PSMQ_MSG_MAX must be at least 6)
 ])
 
 AC_OUTPUT
