inc/psmq.h.in: fix PSMQ_PAYLOAD() for ioctl
ioctl does not have string at beginning of msg.data, thus
calling strlen on it is dangerous, and it won't return
valid pointer to payload.

Signed-off-by: Michał Łyszczek <michal.lyszczek@bofc.pl>

--- a/inc/psmq.h.in
+++ b/inc/psmq.h.in
@@ -27,7 +27,8 @@ enum PSMQ_IOCTL
 #endif
 
 #define PSMQ_TOPIC(p) ((p).data)
-#define PSMQ_PAYLOAD(p) ((void *)((p).data + strlen((p).data) + 1))
+#define PSMQ_PAYLOAD(p) ((void *)((p).ctrl.cmd == PSMQ_CTRL_CMD_IOCTL ? \
+			(p).data : (p).data + strlen((p).data) + 1))
 
 /* struct used to hold state for single psmq client */
 struct psmq
