www/Makefile.am: change $(RM) to rm -f
$(RM) is not posix and is not available on every make there is

no_ci
Signed-off-by: Michał Łyszczek <michal.lyszczek@bofc.pl>

--- a/www/Makefile.am
+++ b/www/Makefile.am
@@ -6,6 +6,6 @@ www:
 	chmod a+rX out -R
 
 clean:
-	$(RM) downloads.html
-	$(RM) -r out
-	$(RM) -r manuals
+	rm -f downloads.html
+	rm -f -r out
+	rm -f -r manuals
