--- a/pkg/deb/rules
+++ b/pkg/deb/rules
@@ -8,4 +8,4 @@ override_dh_shlibdeps:
 	dh_shlibdeps -l$(shell pwd)/lib/.libs --dpkg-shlibdeps-params=--ignore-missing-info
 
 override_dh_auto_test:
-	LD_LIBRARY_PATH=/usr/bofc/lib $(MAKE) check
+	LD_LIBRARY_PATH=/usr/bofc/lib $(MAKE)
