Makefile.am: add $(top_builddir)/inc include
After not distributing psmq.h this file is generated in _build
directory. And while compilation works, when project is build
out of tree in separate directory, compiler can't find psmq.h as it
looks for it in $(top_srcdir) and generated file is in $(top_builddir)

Signed-off-by: Michał Łyszczek <michal.lyszczek@bofc.pl>

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -12,7 +12,8 @@ libpsmq_la_LDFLAGS = $(COVERAGE_LDFLAGS) \
 #                 |        `- increment if source code has changed
 #                 |           set to zero if current is incremented
 #                 `- increment if interfaces have been added, removed or changed
-libpsmq_la_CFLAGS = $(COVERAGE_CFLAGS) -I$(top_srcdir)/inc -I$(top_srcdir)
+libpsmq_la_CFLAGS = $(COVERAGE_CFLAGS) -I$(top_srcdir)/inc -I$(top_srcdir) \
+	-I$(top_builddir)/inc
 
 # static code analyzer
 
