all: make passing of queue names fully optional
psmq is targeted to work mainly (if not only) on embedded devices.
Creating multiple brokers on such systems is a very corner case.
Because of that let's make passing queue names fully optional.
psmq will use default names and generate names for clients. This
will simplify interfaces a little bit.

Signed-off-by: Michał Łyszczek <michal.lyszczek@bofc.pl>

--- a/inc/psmq.h.in
+++ b/inc/psmq.h.in
@@ -94,9 +94,9 @@ struct psmq_msg
 };
 
 
-
-int psmq_init(struct psmq *psmq, const char *brokername, const char *mqname,
-		int maxmsg);
+int psmq_init(struct psmq *psmq, int maxmsg);
+int psmq_init_named(struct psmq *psmq, const char *brokername,
+		const char *mqname, int maxmsg);
 int psmq_cleanup(struct psmq *psmq);
 int psmq_subscribe(struct psmq *psmq, const char *topic);
 int psmq_unsubscribe(struct psmq *psmq, const char *topic);
